tests/semantic_errors/sasha21_3.tl
-- test case 21.
-- Description : function semantic: define builtin function(error)

-- Expected : '3'
require "ifj21" 
 function write() : string end 
